<resources>
    <string name="app_name">Foodi</string>
    <string name="plan_your_meals">Plan Your Meals</string>
    <string name="default_web_client">869393563539-8nps0t8hhcm4vafo9r75kh4sine4todi.apps.googleusercontent.com</string>

    <string name="logo">logo</string>
    <!-- Strings related to login -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="name_hint">Name</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="signup_button">Signup</string>
    <string name="signup_prompt">Already have an account? Sign In</string>

    <string name="signup">Signup</string>
    <string name="signin_prompt">Don\'t have an account? Sign up</string>

    <string name="foodi">Foodi</string>
    <string name="get_started">Get Started</string>
    <string name="let_s_discover_our_world">Let\'s Discover our world!</string>
    <string name="welcome_to_our_foodi">Welcome to our Foodi!</string>


    <string name="app_logo">app Logo</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in">sign In</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_of_the_day">Meal Of The Day</string>
    <string name="meals_for_you">Meals For You</string>
    <string name="hi">Hi,</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_connection">No Internet Connection</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="add_to_plan">Add to Plan</string>
    <string name="instructions">Instructions:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="country_nmae">Country Nmae</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_name_in_details_screen">Meal Name In Details Screen</string>
    <string name="lorem_speurn_pla_pla_pla">lorem speurn pla pla pla</string>
    <string name="meal_category">meal Category</string>
    <string name="your_favourite_meals">Your Favourite Meals</string>
    <string name="please_sign_in">Please Sign In.</string>
    <string name="your_planner">Your Planner</string>
    <string name="search_for_meals">Search For Meals</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="ingredient">Ingredient</string>
    <string name="meal">Meals</string>
    <string name="meal_description_randomcard">Meal description....</string>
    <string name="skip">Skip</string>
    <string name="username">userName</string>
    <string name="foodi_user">Foodi User</string>
    <string name="app_solgan">Foodi,\n\t Plan Your Meals</string>
</resources>