<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/searchScreenConstraintLayout"
    tools:context=".searchscreen.view.SearchFragment">




    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loadingViewSearch"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/searchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/search_for_meals"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_bg_card"

        android:elevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/searchChipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:chipSpacingHorizontal="12dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/categoryChip"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:elevation="4dp"
            android:text="@string/category"
            android:textSize="16sp"
            android:textStyle="bold"

            app:checkedIcon="@drawable/check_chip"
            app:checkedIconVisible="true"
            app:rippleColor="@color/gray_light"
            app:chipStrokeColor="@color/primary"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/ingredientChip"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:checkedIconVisible="true"
            android:elevation="4dp"
            android:text="@string/ingredient"
            android:textSize="16sp"
            android:textStyle="bold"
            app:checkedIcon="@drawable/check_chip"
            app:chipStrokeColor="@color/primary"
            app:rippleColor="@color/gray_light" />

        <com.google.android.material.chip.Chip
            android:id="@+id/countryChip"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:elevation="4dp"
            android:text="@string/country"
            android:textSize="16sp"
            android:textStyle="bold"
            app:checkedIcon="@drawable/check_chip"
            app:checkedIconVisible="true"

            app:rippleColor="@color/gray_light"
            app:chipStrokeColor="@color/primary"
            />


    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingBottom="230dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchChipGroup"
        tools:listitem="@layout/category_card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mealsRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingBottom="230dp"
            android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchChipGroup"
        tools:listitem="@layout/meal_card" />
</androidx.constraintlayout.widget.ConstraintLayout>
